--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
         "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^6.3",
+        "kingflamez/laravelrave": "^3.0",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
         "laravelcollective/html": "^6.1",
-        "fzaninotto/faker": "^1.9.1",
         "livewire/livewire": "^1.3"
     },
     "require-dev": {
